code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_table_20.wast
(assert_invalid
  (module (func $unbound-nested-label
    (block (block (br_table 0 5 (i32.const 1))))
  ))
  "unknown label"
)